	(epackage-activate-package): Use `epackage-enable-file'.
	(epackage-manager): New.
	(epackage-version): devel New.
	(epackage-documentation): New.
	(epackage--doc-buffer): New.
	(epackage--finder-commentary-buffer): New.
	(epackage-documentation-header-string): New.
	(epackage-documentation): New.
	(epackage-version): New.
	(epackage-batch-macro): New.
	(epackage-batch-download-packages): New.
	(epackage-batch-upgrade-packages): New.
	(epackage-batch-upgrade-all-packages): New.
	(epackage-file-name-package-compose): Rename. Was
	`epackage-file-name-vcs-compose'.
	(epackage--directory-name-pkg): Rename. Was
	`epackage--directory-name-vcs'.
	(epackage-status-downloaded-packages): New.
	(epackage-status-enabled-packages): Rename. Was
	`epackage-status-installed-packages'.
	(epackage-status-of-packages): New.
	(epackage-status-installed-packages): New.
	(epackage-status-activated-packages): New.

2010-12-06 Mon  Jari Aalto  <jari.aalto@cante.net>

	* epackage.el (epackage-download-sources-list): Remove argument
	`message'.
	(epackage-pkg-lint-git-branches): New.
	(epackage--layout-mapping): Update.
	(epackage-pkg-lint-dir-structure): New.
	(epackage-w32-p): New.
	(epackage-with-w32): New.
	(epackage-file-name-nondirectory): New.
	(epackage-directory-p): New.
	(epackage-pkg-lint-main): New.
	(epackage-git-command-branch-list): Add `arg' parameter.
	(epackage-git-command-tag-list): Fix docstring.

2010-12-05 Sun  Jari Aalto  <jari.aalto@cante.net>

	* epackage.el (defgroup Epackage): New.
	(epackage-sources-list-info-parse-line): Fix `format'.
	(epackage-download-sources-list): define variable `dir'.
	(epackage-with-debug): New.
	(epackage-with-message): New.

	* doc/index.css: New.

	* doc/Makefile: New.

	* Makefile: New.

2010-12-04  Jari Aalto  <jari.aalto@cante.net>

	* AUTHORS, COPYING, INSTALL, README: New.

	* epackage.el:
	(top-level): Rename package. Add "Compat" levels and explaint it.
	Add acronym DELPS = Distributed Emacs Lisp Package System. Add